# BbB

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  grants.pl
.github/workflows/: Build.yaml  temp.yaml
c/: example1.c
cpp/: example3.cpp
dat/: dat.txt  time.py  time.txt
